Tweaks to 'Data Access' for deployment guide env

--- a/demoroot/notebooks/05 Data Access.ipynb
+++ b/demoroot/notebooks/05 Data Access.ipynb
@@ -55,10 +55,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_domain = \"demo.eoepca.org\"\n",
+    "base_domain = \"c2023082201.eoepca.rconway.uk\"\n",
     "#base_domain = \"develop.eoepca.org\"\n",
     "#base_domain = \"185.52.193.87.nip.io\"\n",
-    "workspace_prefix = \"demo-user\"\n",
+    "workspace_prefix = \"guide-user\"\n",
     "#workspace_prefix = \"user\"\n",
     "system_endpoint = f'https://resource-catalogue.{base_domain}/csw'"
    ]
@@ -83,8 +83,9 @@
     "#scene_id='S2B_MSIL2A_20200902T090559_N0214_R050_T34SGH_20200902T113910.SAFE'\n",
     "# scene_id='S2B_MSIL1C_20210402T095029_N0300_R079_T33SVB_20210402T121737.SAFE'\n",
     "# scene_id=\"S2B_MSIL2A_20190912T084559_N0213_R107_T36UXA_20190912T122242.SAFE\"\n",
-    "scene_id=\"S2B_MSIL2A_20190911T092029_N0213_R093_T34SFG_20190911T135255.SAFE\"\n",
-    "#scene_id='S2B_MSIL1C_20210402T095029_R079_T33UXQ_20210402T121737'"
+    "# scene_id=\"S2B_MSIL2A_20190911T092029_N0213_R093_T34SFG_20190911T135255.SAFE\"\n",
+    "#scene_id='S2B_MSIL1C_20210402T095029_R079_T33UXQ_20210402T121737'\n",
+    "scene_id=\"S2B_MSIL2A_20200902T090559_N0500_R050_T34SFG_20230426T234536.SAFE\""
    ]
   },
   {
@@ -423,7 +424,7 @@
     "    transparent=True,\n",
     "    overlay=True,\n",
     "    control=True,\n",
-    "    time=\"2019-09-02T00:00:00Z/2019-09-04T00:00:00Z\",\n",
+    "    time=\"2019-09-10T00:00:00Z/2019-09-12T00:00:00Z\",\n",
     ").add_to(m)\n",
     "\n",
     "\n",
