Tweaks to 'Workspace' for deployment guide env

--- a/demoroot/notebooks/06 Workspace Management.ipynb
+++ b/demoroot/notebooks/06 Workspace Management.ipynb
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_domain = \"demo.eoepca.org\"\n",
+    "base_domain = \"c2023082201.eoepca.rconway.uk\"\n",
     "# base_domain = \"develop.eoepca.org\"\n",
     "#workspaces_endpoint = f'https://workspace-api-open.{base_domain}/workspaces'\n",
     "workspaces_endpoint = f'https://workspace-api.{base_domain}/workspaces'"
@@ -470,7 +470,7 @@
    "source": [
     "import boto3\n",
     "#S3_ENDPOINT = \"https://cf2.cloudferro.com:8080\"\n",
-    "S3_ENDPOINT = \"https://minio.demo.eoepca.org\"\n",
+    "S3_ENDPOINT = \"https://minio.c2023082201.eoepca.rconway.uk\"\n",
     "session = boto3.session.Session()\n",
     "s3resource = session.resource('s3', aws_access_key_id=s3_access, aws_secret_access_key=s3_secret, endpoint_url=S3_ENDPOINT)\n",
     "object = s3resource.Object(bucket_name, 'application-package/s-expression/s-expression-0_0_2.cwl')\n",
