Tweaks to 'Workspace' for deployment guide env

--- a/demoroot/notebooks/06 Workspace Management.ipynb
+++ b/demoroot/notebooks/06 Workspace Management.ipynb
@@ -91,7 +91,7 @@
    "outputs": [],
    "source": [
     "USER_ADMIN=\"admin\"\n",
-    "USER_ADMIN_PASSWORD=\"admin_Abcd1234#\"\n",
+    "USER_ADMIN_PASSWORD=\"Chang3me!\"\n",
     "admin_id_token = demo.get_id_token(USER_ADMIN, USER_ADMIN_PASSWORD)\n",
     "headers = {\n",
     "    'Authorization': 'Bearer ' + admin_id_token\n",
@@ -125,7 +125,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "preferred_workspace_name = f\"my-new-user-{datetime.datetime.now().timestamp():.0f}\"\n",
+    "preferred_workspace_name = datetime.datetime.now().strftime(\"%m%d%H%M\")\n",
     "preferred_workspace_name"
    ]
   },
