Tweaks to 'User Management' for deployment guide env

--- a/demoroot/notebooks/01 User Management.ipynb
+++ b/demoroot/notebooks/01 User Management.ipynb
@@ -42,7 +42,7 @@
     "#-------------------------------------------------------------------------------\n",
     "# Initialise client\n",
     "#-------------------------------------------------------------------------------\n",
-    "base_domain= \"demo.eoepca.org\"\n",
+    "base_domain= \"c2023082201.eoepca.rconway.uk\"\n",
     "platform_domain= \"auth.\" + base_domain\n",
     "base_url= \"https://\" + platform_domain\n",
     "dummy_serv= \"https://dummy-service.\" + base_domain\n",
@@ -377,7 +377,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "82e6349d",
    "metadata": {},
@@ -414,7 +413,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "ce90b508",
    "metadata": {},
@@ -426,6 +424,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3853cfdc",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "#--------------------------\n",
@@ -447,23 +452,26 @@
     "#--------------------------\n",
     "a= requests.get(dummy_serv + open_uri, verify=False)\n",
     "print(\"Unauthorize access to open resource (no token passed), expected 200: \"+ str(a))"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "2e54582c",
+   "metadata": {},
    "source": [
     "### Terms and conditions"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "55c0a0b3",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "USER_NAME= \"eric\"\n",
@@ -475,10 +483,7 @@
     "headers = {'Content-Type': 'application/json, Authorization: Bearer '+ operator_id_token}\n",
     "response = requests.post(dummy_pep_api+'/resources', headers=headers, data=data, verify=False)\n",
     "print(\"Resource Insertion with code (200 is ok, 422 is resource already inserted): \" + str(response))"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   }
  ],
  "metadata": {
