Fix User Management resource policy update step

--- a/demoroot/notebooks/01 User Management.ipynb
+++ b/demoroot/notebooks/01 User Management.ipynb
@@ -334,7 +334,7 @@
     "#--------------------------\n",
     "#UPDATE POLICY--> 200\n",
     "#--------------------------\n",
-    "data= {'name':'Updated Policy for Demo Resource','description':'Policy modified for demo purpose','config':{'resource_id':k[\"_id\"] ,'action':'get','rules':[{'OR':[{'EQUAL':{'id':operator_UID}},{'EQUAL':{'id':alice_UID}}]}]},'scopes':['protected_access']}\n",
+    "data= {'name':'Updated Policy for Demo Resource','description':'Policy modified for demo purpose','config':{'resource_id':k[\"_id\"] ,'action':'get', 'T&C': [],'rules':[{'OR':[{'EQUAL':{'id':operator_UID}},{'EQUAL':{'id':alice_UID}}]}]},'scopes':['protected_get']}\n",
     "resp, text= demo.update_policy(pdp_url, data, k[\"_id\"], operator_id_token)\n",
     "print(resp)"
    ]
