Tweaks to 'Resource Catalogue' for deployment guide env

--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -353,7 +353,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "anytext_query = PropertyIsEqualTo('csw:AnyText', 'Orthoimagery')"
+    "anytext_query = PropertyIsEqualTo('csw:AnyText', 'Vegetation')"
    ]
   },
   {
@@ -727,8 +727,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "app_id = \"nhi\"\n",
-    "app_version = \"0_0_3\"\n",
+    "app_id = \"s-expression\"\n",
+    "app_version = \"0_0_2\"\n",
     "application_name = f\"{app_id}-{app_version}\""
    ]
   },
@@ -1565,7 +1565,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_catalogue_cql_text_query = w.collection_items('metadata:main', filter=\"title LIKE 'S2B_MSIL1C_%'\")"
+    "my_catalogue_cql_text_query = w.collection_items('metadata:main', filter=\"title LIKE 'Sentinel%'\")"
    ]
   },
   {
@@ -1603,7 +1603,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_catalogue_cql_json_query = w.collection_items('metadata:main', limit=1, cql={'op': '=', 'args': [{ 'property': 'title' }, 'S2B_MSIL1C_20190910T095029_N0208_R079_T33TXN_20190910T120910.SAFE']})"
+    "my_catalogue_cql_json_query = w.collection_items('metadata:main', limit=1, cql={'op': '=', 'args': [{ 'property': 'title' }, 'Sentinel-2 MSI Level 1C']})"
    ]
   },
   {
