Various fixes and OGC API - Records interface added

--- a/demoroot/notebooks/08 RC Datacube.ipynb
+++ b/demoroot/notebooks/08 RC Datacube.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "1b033d27-e72e-47f2-bc7e-67dee474c1de",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "id": "4715df0a-31ad-4f46-b75d-2f0b477d9362",
    "metadata": {},
    "outputs": [],
@@ -62,21 +62,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "id": "3bf133dc-0cff-4925-8970-298d16757ea0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://resource-catalogue.develop.eoepca.org/csw\n",
-      "CSW\n",
-      "2.0.2\n",
-      "['GetCapabilities', 'DescribeRecord', 'GetDomain', 'GetRecords', 'GetRecordById', 'GetRepositoryItem', 'Transaction', 'Harvest']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "system_catalogue_endpoint = f'https://resource-catalogue.{base_domain}/csw'\n",
     "print(system_catalogue_endpoint)\n",
@@ -90,23 +79,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "id": "f9b45662",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Constraint: AdditionalQueryables - ['apiso:AccessConstraints', 'apiso:Bands', 'apiso:Classification', 'apiso:CloudCover', 'apiso:ConditionApplyingToAccessAndUse', 'apiso:Contributor', 'apiso:Creator', 'apiso:Degree', 'apiso:Instrument', 'apiso:Lineage', 'apiso:OtherConstraints', 'apiso:Platform', 'apiso:Publisher', 'apiso:Relation', 'apiso:ResponsiblePartyRole', 'apiso:SensorType', 'apiso:SpecificationDate', 'apiso:SpecificationDateType', 'apiso:SpecificationTitle'],\n",
-       " Constraint: SupportedDublinCoreQueryables - ['csw:AnyText', 'dc:contributor', 'dc:creator', 'dc:date', 'dc:format', 'dc:identifier', 'dc:language', 'dc:publisher', 'dc:relation', 'dc:rights', 'dc:source', 'dc:subject', 'dc:title', 'dc:type', 'dct:abstract', 'dct:alternative', 'dct:modified', 'dct:spatial', 'ows:BoundingBox'],\n",
-       " Constraint: SupportedISOQueryables - ['apiso:Abstract', 'apiso:AlternateTitle', 'apiso:AnyText', 'apiso:BoundingBox', 'apiso:CRS', 'apiso:CouplingType', 'apiso:CreationDate', 'apiso:Denominator', 'apiso:DistanceUOM', 'apiso:DistanceValue', 'apiso:Edition', 'apiso:Format', 'apiso:GeographicDescriptionCode', 'apiso:HasSecurityConstraints', 'apiso:Identifier', 'apiso:KeywordType', 'apiso:Language', 'apiso:Modified', 'apiso:OperatesOn', 'apiso:OperatesOnIdentifier', 'apiso:OperatesOnName', 'apiso:Operation', 'apiso:OrganisationName', 'apiso:ParentIdentifier', 'apiso:PublicationDate', 'apiso:ResourceLanguage', 'apiso:RevisionDate', 'apiso:ServiceType', 'apiso:ServiceTypeVersion', 'apiso:Subject', 'apiso:TempExtent_begin', 'apiso:TempExtent_end', 'apiso:Title', 'apiso:TopicCategory', 'apiso:Type']]"
-      ]
-     },
-     "execution_count": 81,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "csw.get_operation_by_name('GetRecords').constraints"
    ]
@@ -132,8 +108,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6a4bc9aa-b1a0-4f12-bc50-107a225c24aa",
+   "metadata": {},
+   "source": [
+    "We will use the OGC CSW interface, building an OGC query and execute through the OWSLib client:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "id": "7adeadc5-57b6-48bf-9e2b-86b75a626197",
    "metadata": {},
    "outputs": [],
@@ -149,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "id": "7d20a8ac-6b2f-4df0-946e-fd85ac2d6f79",
    "metadata": {},
    "outputs": [],
@@ -161,8 +145,7 @@
     "           title,\n",
     "        ]\n",
     "    )\n",
-    "]\n",
-    "\n"
+    "]"
    ]
   },
   {
@@ -171,57 +154,47 @@
    "id": "4eb3b4ee",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "csw.getrecords2(constraints=filter_list, outputschema='http://www.isotc211.org/2005/gmd')\n",
+    "csw.results"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 84,
-   "id": "04c9d318",
+   "cell_type": "markdown",
+   "id": "b91272bb-629b-44ff-b027-c41b838d1d40",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', '__weakref__', 'abstract', 'accessrights', 'alternative', 'bbox', 'bbox_wgs84', 'contributor', 'coverage', 'created', 'creator', 'date', 'format', 'identifier', 'identifiers', 'ispartof', 'issued', 'language', 'license', 'modified', 'publisher', 'rdf', 'references', 'relation', 'rights', 'rightsholder', 'source', 'spatial', 'subjects', 'temporal', 'title', 'type', 'uris', 'xml']\n"
-     ]
-    }
-   ],
    "source": [
-    "item_identifier = 'ESACCI-LC-L4-LCCS-Map-300m-P1Y-2009-v2.0.7cds'\n",
-    "\n",
-    "csw.getrecordbyid([item_identifier])\n",
-    "\n",
-    "print(dir(record))"
+    "We can then get information of all the query results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
+   "id": "83e36859-4c34-4124-804a-fa7570e0b13d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for rec in csw.records:\n",
+    "    print(f'identifier: {csw.records[rec].identifier}\\ntype: {csw.records[rec].identification[0].identtype}\\ntitle: {csw.records[rec].identification[0].title}\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04c9d318",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "item_identifier = list(csw.records)[0]\n",
+    "print(item_identifier)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "dff84ce7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Title: ESA CCI Land Cover Map for 2009\n",
-      "Abstract: None\n",
-      "Date: None\n",
-      "Type: item\n",
-      "Coverate: None\n",
-      "Format None\n",
-      "License: None\n",
-      "Source: None\n",
-      "Spatial: None\n",
-      "Bounding Box Dimensions:\n",
-      "Min X: -180.0\n",
-      "Max X: 180.0\n",
-      "Min Y: -90.0\n",
-      "Max Y: 90.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "record = csw.records[item_identifier]\n",
     "\n",
@@ -245,12 +218,117 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ee35ae57-ae33-4c4a-96dc-3c0995886082",
+   "metadata": {},
+   "source": [
+    "We will now use the OGC API - Records interface to work with the JSON data:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b5efbb8d-da10-422b-9acf-b712da6aba3a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "records_catalogue_endpoint = f'https://resource-catalogue.{base_domain}'\n",
+    "w = Records(records_catalogue_endpoint)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5df9df4a-fb47-466d-90a4-e7168c44ca22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w.conformance()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "977350e4-bf2b-4db6-8694-6cdb3993b150",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w.collection_queryables('metadata:main')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5c0dd13-801e-4dfe-a90d-fff148f60c96",
+   "metadata": {},
+   "source": [
+    "We just query the catalogue for all records in the default collection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "067661d6-7f7d-43b2-b229-ea8d48e8ac13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_catalogue_query = w.collection_items('metadata:main')\n",
+    "my_catalogue_query['numberMatched']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5efeca38-428a-456c-9ca9-e03f5dd9485a",
+   "metadata": {},
+   "source": [
+    "And we show the title of the first record of the catalogue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "781c7f3a-06ea-4d05-9632-bccbde358f2c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_catalogue_query['features'][0]['properties']['title']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "315be0b0-8df9-45ca-ba78-2f97d3124771",
+   "metadata": {},
+   "source": [
+    "Then we execute a CQL text query"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db870e9c-4926-4f7c-bacd-b879ee048de7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_catalogue_cql_text_query = w.collection_items('metadata:main', filter=\"title LIKE 'ESA CCI%'\")\n",
+    "my_catalogue_cql_text_query['features'][0]['properties']['title']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1083a1be-a5d8-4409-995b-4e1623346204",
+   "metadata": {},
+   "source": [
+    "We present the full JSON (STAC) record for the first result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b37793cc-820f-4583-b8df-3d3cb0e3c60e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_catalogue_cql_text_query['features'][0]"
+   ]
   }
  ],
  "metadata": {
