Add filter for datacube extension

--- a/demoroot/notebooks/08 RC Datacube.ipynb
+++ b/demoroot/notebooks/08 RC Datacube.ipynb
@@ -155,7 +155,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csw.getrecords2(constraints=filter_list, outputschema='http://www.isotc211.org/2005/gmd')\n",
+    "csw.getrecords2(constraints=filter_list)\n",
     "csw.results"
    ]
   },
@@ -165,17 +165,6 @@
    "metadata": {},
    "source": [
     "We can then get information of all the query results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "83e36859-4c34-4124-804a-fa7570e0b13d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for rec in csw.records:\n",
-    "    print(f'identifier: {csw.records[rec].identifier}\\ntype: {csw.records[rec].identification[0].identtype}\\ntitle: {csw.records[rec].identification[0].title}\\n')"
    ]
   },
   {
@@ -298,7 +287,7 @@
    "id": "315be0b0-8df9-45ca-ba78-2f97d3124771",
    "metadata": {},
    "source": [
-    "Then we execute a CQL text query"
+    "Then we execute a CQL text query for the records that have the datacube extension"
    ]
   },
   {
@@ -308,7 +297,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_catalogue_cql_text_query = w.collection_items('metadata:main', filter=\"title LIKE 'ESA CCI%'\")\n",
+    "my_catalogue_cql_text_query = w.collection_items('metadata:main', filter=\"anytext ILIKE 'https://stac-extensions.github.io/datacube/v2.1.0/schema.json'\")\n",
+    "my_catalogue_cql_text_query['numberMatched']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad7859ed-e628-4f95-8509-261c472f03b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "my_catalogue_cql_text_query['features'][0]['properties']['title']"
    ]
   },
@@ -329,6 +328,14 @@
    "source": [
     "my_catalogue_cql_text_query['features'][0]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b72971dd-491f-48ce-8417-f8c5dcc73593",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
