Add query to get all records that match datacube in anytext search

--- a/demoroot/notebooks/08 RC Datacube.ipynb
+++ b/demoroot/notebooks/08 RC Datacube.ipynb
@@ -297,7 +297,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_catalogue_cql_text_query = w.collection_items('metadata:main', filter=\"anytext ILIKE 'https://stac-extensions.github.io/datacube/v2.1.0/schema.json'\")\n",
+    "my_catalogue_cql_text_query = w.collection_items('metadata:main', filter=\"anytext ILIKE '%datacube%'\")\n",
     "my_catalogue_cql_text_query['numberMatched']"
    ]
   },
@@ -328,14 +328,6 @@
    "source": [
     "my_catalogue_cql_text_query['features'][0]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b72971dd-491f-48ce-8417-f8c5dcc73593",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
