Adding datacube example

--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -2344,6 +2344,140 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e678e6a8-0e6e-4067-b21f-b15fa9d32163",
+   "metadata": {},
+   "source": [
+    "### STAC Datacube demo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af09c9cf-098f-4c53-81eb-ce0450cf1be3",
+   "metadata": {},
+   "source": [
+    "In this part of the demo, the user will register a STAC Item with datacube extension and use the system level resource catalogue to discover datacube datasets."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "efade885-f9dc-4808-ab44-2b5e23112cce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import requests\n",
+    "from owslib.ogcapi.records import Records"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6221616-d38c-4df2-8f8b-9596ea3bdddd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "record_data = '../data/ESACCI-LC-L4-LCCS-Map-300m-P1Y-2009-v2.0.7cds.json'\n",
+    "base_domain = \"develop.eoepca.org\"\n",
+    "system_catalogue_endpoint = f'https://resource-catalogue.{base_domain}'\n",
+    "collection_id = 'metadata:main'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49c17999-d240-432b-a54e-a881a401490e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r = Records(system_catalogue_endpoint)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7450b94-4a5d-4047-bf06-69b332873588",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(record_data) as fh:\n",
+    "    data = json.load(fh)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49e96d68-adea-4cd2-893b-0bc8e13499ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "identifier = data['id']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82a92790-96af-4353-97fe-fb118b231192",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r.collection_item_delete(collection_id, identifier)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c4f0970-c854-4f0c-88fe-6e001442b86d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r.collection_item_create(collection_id, data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2787aba-641e-4c60-aa1f-0df77aa4fe65",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_catalogue_query = r.collection_items('metadata:main')\n",
+    "my_catalogue_query['numberMatched']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98bfeaf9-6415-4938-8a90-95562226f1e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_catalogue_cql_text_query = r.collection_items('metadata:main', filter=\"anytext ILIKE '%datacube%'\")\n",
+    "my_catalogue_cql_text_query['numberMatched']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f362f266-9221-42cd-bce7-fa483ff67ebd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_catalogue_cql_text_query['features'][1]['properties']['title']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a261ca48-23ab-4ce4-8d75-1a62de31615c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_catalogue_cql_text_query['features'][1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8024d488-6a53-4821-b491-7c33f2a1612c",
    "metadata": {},
    "source": [
